--- a/Workshop - Online shop/package.json
+++ b/Workshop - Online shop/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "vue": "^3.3.4"
+    "axios": "^1.6.3",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.25",
