--- a/Workshop - Online Shop - Composition API/package.json
+++ b/Workshop - Online Shop - Composition API/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "softuni-vue-js-starter",
+  "name": "vite-project",
   "type": "module",
   "version": "0.0.0",
   "private": true,
@@ -11,10 +11,17 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.6.3",
+    "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.46.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0",
+    "@antfu/eslint-config": "^1.0.0-beta.25",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.51.0",
     "vite": "^4.4.5",
